# Desktop-Invoice-App

./: index.html  package.json  tailwind.config.js
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: login.rs  main.rs
src/components/: Button.vue
src/router/: index.js
src/views/: AuthorityLogin.vue  Intro.vue  Login.vue  Register.vue  TaxpayerLogin.vue
