[package]
name = "bukz"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "http-all", "window-start-dragging", "window-show", "window-close", "window-maximize", "window-hide", "window-minimize", "window-unminimize", "window-unmaximize", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-web = "4.5.1"
json = "0.12.4"
uuid = "1.8.0"
validator = "0.17.0"
surrealdb = "1.3.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
